// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    You have 
    18
     
    expenses
     with total value:
    $438,293,238.92
  </h1>
</div>
`;

exports[`should correctly render expenses summary with single expense 1`] = `
<div>
  <h1>
    You have 
    1
     
    expense
     with total value:
    $2.35
  </h1>
</div>
`;
